--- a/templates/forge-partial-tool-required.hbs
+++ b/templates/forge-partial-tool-required.hbs
@@ -8,7 +8,7 @@ Please retry with correct tool use
 {{/if}}
 
 Next Steps: 
-If you have completed the user's task, use the `forge_tool_attempt_completion` tool with a message. 
-If you require additional information from the user, use the `forge_tool_attempt_partial_completion` tool with a question. 
+If you have completed the user's all task and sub-tasks then and only then, use the `forge_tool_attempt_completion` tool with a message. 
+If you require additional information from the user or wish to fetch next instructions, use the `forge_tool_attempt_partial_completion` tool with a question. 
 Otherwise, if you have not completed the task and do not need additional information, then proceed with the next step of the task.
 [This is an automated message, so do not apologize, appreciate or be conversational]
