feat: Added partial_completion

--- a/templates/forge-partial-tool-required.hbs
+++ b/templates/forge-partial-tool-required.hbs
@@ -9,6 +9,6 @@ Please retry with correct tool use
 
 Next Steps: 
 If you have completed the user's all task and sub-tasks then and only then, use the `forge_tool_attempt_completion` tool with a message. 
-If you require additional information from the user or wish to fetch next instructions, use the `forge_tool_attempt_partial_completion` tool with a question. 
+If you require or expect additional information from the user or wish to fetch next instructions, use the `forge_tool_partial_completion` tool with a question. 
 Otherwise, if you have not completed the task and do not need additional information, then proceed with the next step of the task.
 [This is an automated message, so do not apologize, appreciate or be conversational]
